--- a/src/styles/global/reset.css
+++ b/src/styles/global/reset.css
@@ -3,3 +3,21 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  color: var(--cor-preto);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
