--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,20 @@
+/* Global */
 @import url('./global/reset.css');
+@import url('./utils/colors.css');
 
+/* Fonte */
 @import url('./fonts/font.css');
+
+/* Header */
+@import url('./partials/header.css');
+@import url('./partials/superinfo.css');
+
+/* Section */
+@import url('./partials/sobre.css');
+@import url('./partials/produto.css');
+@import url('./partials/qualidades.css');
+@import url('./partials/precos.css');
+
+/* Footer */
+@import url('./partials/newsletter.css');
+@import url('./partials/footer.css');
