--- a/src/styles/utils/colors.css
+++ b/src/styles/utils/colors.css
@@ -1,5 +1,8 @@
 :root {
-  --cor-preto: #222222;
-  --cor-azul: #122AB2;
-  --cor-branca: #FFFFFF;
+  --cor-preto-1: #222222;
+
+  --cor-branco-1: #FFFFFF;
+
+  --cor-azul-1: #122AB2;
+  --cor-azul-2: #2C70FF;
 }
