--- a/src/styles/global/reset.css
+++ b/src/styles/global/reset.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Nunito", Helvetica, Arial, sans-serif;
-  color: var(--cor-preto);
+  color: var(--cor-preto-1);
 }
 
 ul {
