feat: finalizado a estilização dos produtos.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,7 +12,7 @@
 /* Section */
 @import url('./partials/introducao.css');
 @import url('./partials/sobre.css');
-@import url('./partials/produto.css');
+@import url('./partials/produtos.css');
 @import url('./partials/qualidades.css');
 @import url('./partials/precos.css');
 
