--- a/src/styles/partials/produtos.css
+++ b/src/styles/partials/produtos.css
@@ -16,7 +16,7 @@
 }
 
 .produto-item {
-  /* flex-grow -> Cada imagem somente 1 espaço. / flex-shrink -> Valor padrão. / flex-basis -> Quando alguma imagem atingir 175px ele irá quebrar a img para baixo. */
+  /* flex-grow -> O valor 1 faz expandir ao máximo cada imagem. / flex-shrink -> O valor 1 é o padrão. / flex-basis -> Quando algum elemento atingir 175px ele irá quebrar para baixo. */
   flex: 1 1 175px;
   margin: 10px;
 }
@@ -33,7 +33,7 @@
 }
 
 .rosa {
-  border-top: 8px solid var(--cor-rosa-1); 
+  border-top: 8px solid var(--cor-rosa-1);
 }
 
 .azul {
