style: fonte do newsletter modificada no mobile.

--- a/src/styles/partials/newsletter.css
+++ b/src/styles/partials/newsletter.css
@@ -69,3 +69,9 @@
   color: var(--cor-branco-1);
   padding: 15px 10px;
 }
+
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 1.5em;
+  }
+}
